hq sandbox - latest/src/objects/SignupRequest.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Signup Requests</relationshipLabel>
        <relationshipName>Signup_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signup Requests</relationshipLabel>
        <relationshipName>Signup_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Signup Requests</relationshipLabel>
        <relationshipName>Signup_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>